--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -9,6 +9,9 @@
 		<script src="main.js" defer></script>
 	</head>
 	<body>
+		<div class="header">
+			<h1>TIC TAC TOE</h1>
+		</div>
 		<div class="board" id="board">
 			<div class="cell" data-cell></div>
 			<div class="cell" data-cell></div>
